@@ -3,6 +3,7 @@ package com.example.demo.security;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+
 import org.springframework.security.authentication.*;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -10,33 +11,44 @@ import org.springframework.security.web.authentication.AuthenticationFailureHand
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 
 @Component
 public class CustomAuthenticationFailureHandler
         implements AuthenticationFailureHandler {
 
-    @Override
-    public void onAuthenticationFailure(
-            HttpServletRequest request,
-            HttpServletResponse response,
-            AuthenticationException exception)
-            throws IOException, ServletException {
+	@Override
+	public void onAuthenticationFailure(
+	        HttpServletRequest request,
+	        HttpServletResponse response,
+	        AuthenticationException exception)
+	        throws IOException {
 
-        String errorMessage = "아이디 또는 비밀번호가 틀렸습니다.";
+	    String errorMessage = "로그인에 실패했습니다.";
 
-        if (exception instanceof UsernameNotFoundException) {
-            errorMessage = "존재하지 않는 아이디입니다.";
-        } else if (exception instanceof BadCredentialsException) {
-            errorMessage = "비밀번호가 틀렸습니다.";
-        } else if (exception instanceof DisabledException) {
-            errorMessage = "이메일 인증을 완료해주세요.";
-        } else if (exception instanceof LockedException) {
-            errorMessage = "잠긴 계정입니다. 관리자에게 문의하세요.";
-        }
+	    // 1️ Service 단에서 던진 예외 (가장 중요)
+	    if (exception instanceof InternalAuthenticationServiceException) {
+	        Throwable cause = exception.getCause();
+	        errorMessage = (cause != null)
+	                ? cause.getMessage()
+	                : exception.getMessage();
+	    }
+	    // 2️ 계정 비활성 / 탈퇴
+	    else if (exception instanceof DisabledException) {
+	        errorMessage = exception.getMessage();
+	    }
+	    // 3️ 계정 잠금
+	    else if (exception instanceof LockedException) {
+	        errorMessage = "계정이 잠겨 있습니다.";
+	    }
+	    // 4️ 비밀번호 오류
+	    else if (exception instanceof BadCredentialsException) {
+	        errorMessage = "비밀번호가 틀렸습니다.";
+	    }
 
-        errorMessage = URLEncoder.encode(errorMessage, StandardCharsets.UTF_8);
-        response.sendRedirect("/login?error=" + errorMessage);
-    }
+	    response.sendRedirect(
+	            "/login?error=" +
+	            java.net.URLEncoder.encode(errorMessage, "UTF-8")
+	    );
+	}
 }
+
